[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-deepseek>=0.1.3",
    "langchain-mcp-adapters>=0.1.1",
    "langgraph>=0.4.7",
    "mcp[cli]>=1.9.1",
]
